--- a/tugas 2/style.css
+++ b/tugas 2/style.css
@@ -68,8 +68,13 @@ button {
   width: 100%;
 }
 
-p {
-  text-align: center;
+section#list p {
+  background-color: #b30000;
+  color: white;
+  padding: 12px;
+  border-radius: 5px;
+  font-size: 16px;
+  margin-bottom: 20px;
 }
 
 section#list {
